@@ -1,4 +1,6 @@
             Graphics.asImage() now contains buffer when bpp != 8 (fix #1863)
+            nRF52 SDK15: Fix NRF.setScan/findDevices/etc
+            nRF52: reduce input buffer space taken by advertising packets
 
      2v06 : Allow `"ram"` keyword at the top of a function to allow it to be pretokenised and loaded to RAM
             Don't store line numbers for pretokenised functions
